overflow fix

--- a/bb-timeline-module/css/frontend.css
+++ b/bb-timeline-module/css/frontend.css
@@ -22,7 +22,6 @@
     padding: 0;
     list-style: none !important;
     position: relative;
-    overflow-x: hidden;
 } 
 
 .bb-tmtimeline-container .bb-tmtimeline > li {
@@ -382,6 +381,9 @@
 
 @media screen and (max-width: 980px) {
     /*common css*/
+    .bb-tmtimeline-container .bb-tmtimeline {
+        overflow-x: hidden;
+    } 
     .bb-tmtimeline-container .bb-tmtimeline > li {
         position: relative;
         margin: 0 0 0 5px !important;
